--- a/index.html
+++ b/index.html
@@ -4,65 +4,93 @@
   <meta charset="UTF-8" />
   <title>Barcode Scanner</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script type="module">
-    import { BrowserMultiFormatReader } from 'https://cdn.jsdelivr.net/npm/@zxing/browser@latest/+esm';
-
-    const reader = new BrowserMultiFormatReader();
-    const video = document.getElementById('video');
-    const output = document.getElementById('output');
-    const info = document.getElementById('info');
-
-    document.getElementById('start-btn').addEventListener('click', async () => {
-      output.textContent = "Scanning...";
-      info.innerHTML = "";
-      try {
-        const devices = await BrowserMultiFormatReader.listVideoInputDevices();
-        const deviceId = devices[0]?.deviceId;
-        if (!deviceId) throw new Error("No camera found");
-
-        await reader.decodeFromVideoDevice(deviceId, video, async (result, error) => {
-          if (result) {
-            const code = result.getText();
-            output.textContent = `Scanned Barcode: ${code}`;
-            reader.reset(); // Stop scanning
-            fetchProduct(code);
-          }
-        });
-      } catch (err) {
-        output.textContent = `Error: ${err.message}`;
-      }
-    });
-
-    async function fetchProduct(barcode) {
-      try {
-        const res = await fetch(`https://chinatown-barlookup.123456789sunzheng.workers.dev/?barcode=${encodeURIComponent(barcode)}`);
-        const data = await res.json();
-        if (data.error) {
-          info.innerHTML = `<p>❌ ${data.error}</p>`;
-        } else {
-          info.innerHTML = `
-            <p><strong>Name:</strong> ${data.Pm}</p>
-            <p><strong>Unit:</strong> ${data.Dw}</p>
-            <p><strong>Price:</strong> ${data.hyj}</p>
-          `;
-        }
-      } catch (err) {
-        info.innerHTML = `<p>⚠️ Lookup failed</p>`;
-      }
-    }
-  </script>
   <style>
-    body { font-family: sans-serif; text-align: center; padding: 20px; }
-    button { font-size: 16px; padding: 10px 20px; margin-bottom: 10px; }
-    video { width: 100%; max-width: 400px; border: 2px solid #ccc; margin-bottom: 10px; }
-    #output, #info { font-size: 18px; margin-top: 10px; }
+    body {
+      font-family: sans-serif;
+      text-align: center;
+      padding: 2rem;
+      background: #f9f9f9;
+    }
+    h1 {
+      margin-bottom: 1rem;
+    }
+    button {
+      padding: 10px 20px;
+      font-size: 16px;
+      cursor: pointer;
+    }
+    video {
+      margin-top: 1rem;
+      width: 100%;
+      max-width: 400px;
+      border: 2px solid #ccc;
+      border-radius: 8px;
+    }
+    #output, #product {
+      margin-top: 1rem;
+      font-size: 18px;
+    }
   </style>
 </head>
 <body>
-  <h1>Scan Barcode</h1>
+  <h1>Chinatown Barcode Scanner</h1>
   <button id="start-btn">Start Camera</button>
-  <video id="video" playsinline></video>
+  <video id="video" playsinline muted></video>
   <div id="output">Waiting to scan...</div>
-  <div id="info"></div>
+  <div id="product"></div>
+
+  <script type="module">
+    document.addEventListener("DOMContentLoaded", async () => {
+      const video = document.getElementById('video');
+      const output = document.getElementById('output');
+      const product = document.getElementById('product');
+      const startBtn = document.getElementById('start-btn');
+
+      const { BrowserMultiFormatReader } = await import('https://cdn.jsdelivr.net/npm/@zxing/browser/+esm');
+      const reader = new BrowserMultiFormatReader();
+
+      startBtn.addEventListener('click', async () => {
+        output.textContent = "Scanning...";
+        product.innerHTML = "";
+
+        try {
+          const devices = await BrowserMultiFormatReader.listVideoInputDevices();
+          if (!devices.length) throw new Error("No camera found");
+
+          const deviceId = devices[0].deviceId;
+
+          await reader.decodeFromVideoDevice(deviceId, video, async (result, error) => {
+            if (result) {
+              const barcode = result.getText();
+              output.textContent = `Scanned: ${barcode}`;
+              reader.reset(); // stop scanning
+              fetchProduct(barcode);
+            }
+          });
+        } catch (err) {
+          output.textContent = `⚠️ ${err.message}`;
+        }
+      });
+
+      async function fetchProduct(barcode) {
+        try {
+          const response = await fetch(`https://chinatown-barlookup.YOUR-NAME.workers.dev/?barcode=${encodeURIComponent(barcode)}`);
+          const data = await response.json();
+
+          if (data.error) {
+            product.innerHTML = `<p>❌ ${data.error}</p>`;
+          } else {
+            product.innerHTML = `
+              <p><strong>Name:</strong> ${data.Pm}</p>
+              <p><strong>Unit:</strong> ${data.Dw}</p>
+              <p><strong>Price:</strong> ${data.hyj}</p>
+            `;
+          }
+        } catch (e) {
+          product.innerHTML = `<p>⚠️ Failed to fetch product info</p>`;
+        }
+      }
+    });
+  </script>
 </body>
 </html>
