--- a/index.html
+++ b/index.html
@@ -60,12 +60,14 @@
           const deviceId = devices[0].deviceId;
 
           await reader.decodeFromVideoDevice(deviceId, video, async (result, error) => {
+          const stopScan = await reader.decodeFromVideoDevice(deviceId, video, async (result, error) => {
             if (result) {
               const barcode = result.getText();
               output.textContent = `Scanned: ${barcode}`;
-              reader.reset(); // stop scanning
+              stopScan(); // ✅ This stops the video scan
               fetchProduct(barcode);
             }
+          });
           });
         } catch (err) {
           output.textContent = `⚠️ ${err.message}`;
@@ -74,7 +76,7 @@
 
       async function fetchProduct(barcode) {
         try {
-          const response = await fetch(`https://chinatown-barlookup.YOUR-NAME.workers.dev/?barcode=${encodeURIComponent(barcode)}`);
+          const response = await fetch(`https://chinatown-barlookup.123456789sunzheng.workers.dev/?barcode=${encodeURIComponent(barcode)}`);
           const data = await response.json();
 
           if (data.error) {
