--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       font-family: sans-serif;
       text-align: center;
       padding: 2rem;
-      background: #f9f9f9;
+      background: #f0f0f0;
     }
     h1 {
       margin-bottom: 1rem;
@@ -17,14 +17,13 @@
     button {
       padding: 10px 20px;
       font-size: 16px;
-      cursor: pointer;
+      margin-bottom: 1rem;
     }
     video {
-      margin-top: 1rem;
       width: 100%;
       max-width: 400px;
-      border: 2px solid #ccc;
       border-radius: 8px;
+      border: 2px solid #ccc;
     }
     #output, #product {
       margin-top: 1rem;
@@ -33,66 +32,63 @@
   </style>
 </head>
 <body>
-  <h1>Chinatown Barcode Scanner</h1>
-  <button id="start-btn">Start Camera</button>
+  <h1>📦 Chinatown Barcode Scanner</h1>
+  <button id="start-btn">Start Scanning</button>
   <video id="video" playsinline muted></video>
-  <div id="output">Waiting to scan...</div>
+  <div id="output">Waiting...</div>
   <div id="product"></div>
 
   <script type="module">
-    document.addEventListener("DOMContentLoaded", async () => {
-      const video = document.getElementById('video');
-      const output = document.getElementById('output');
-      const product = document.getElementById('product');
-      const startBtn = document.getElementById('start-btn');
+    import { BrowserMultiFormatReader } from 'https://cdn.jsdelivr.net/npm/@zxing/browser@0.2.6/+esm';
 
-      const { BrowserMultiFormatReader } = await import('https://cdn.jsdelivr.net/npm/@zxing/browser/+esm');
-      const reader = new BrowserMultiFormatReader();
+    const video = document.getElementById('video');
+    const output = document.getElementById('output');
+    const product = document.getElementById('product');
+    const startBtn = document.getElementById('start-btn');
 
-      startBtn.addEventListener('click', async () => {
-        output.textContent = "Scanning...";
-        product.innerHTML = "";
+    const reader = new BrowserMultiFormatReader();
 
-        try {
-          const devices = await BrowserMultiFormatReader.listVideoInputDevices();
-          if (!devices.length) throw new Error("No camera found");
+    startBtn.addEventListener('click', async () => {
+      output.textContent = "Scanning...";
+      product.innerHTML = "";
 
-          const deviceId = devices[0].deviceId;
+      try {
+        const devices = await BrowserMultiFormatReader.listVideoInputDevices();
+        if (!devices.length) throw new Error("No camera found");
 
-          await reader.decodeFromVideoDevice(deviceId, video, async (result, error) => {
-          const stopScan = await reader.decodeFromVideoDevice(deviceId, video, async (result, error) => {
-            if (result) {
-              const barcode = result.getText();
-              output.textContent = `Scanned: ${barcode}`;
-              stopScan(); // ✅ This stops the video scan
-              fetchProduct(barcode);
-            }
-          });
-          });
-        } catch (err) {
-          output.textContent = `⚠️ ${err.message}`;
-        }
-      });
+        const deviceId = devices[0].deviceId;
 
-      async function fetchProduct(barcode) {
-        try {
-          const response = await fetch(`https://chinatown-barlookup.123456789sunzheng.workers.dev/?barcode=${encodeURIComponent(barcode)}`);
-          const data = await response.json();
-
-          if (data.error) {
-            product.innerHTML = `<p>❌ ${data.error}</p>`;
-          } else {
-            product.innerHTML = `
-              <p><strong>Name:</strong> ${data.Pm}</p>
-              <p><strong>Unit:</strong> ${data.Dw}</p>
-              <p><strong>Price:</strong> ${data.hyj}</p>
-            `;
+        await reader.decodeFromVideoDevice(deviceId, video, async (result, error) => {
+          if (result) {
+            const code = result.getText();
+            output.textContent = `Scanned: ${code}`;
+            reader.reset(); // ✅ THIS is how you stop scanning
+            fetchProduct(code);
           }
-        } catch (e) {
-          product.innerHTML = `<p>⚠️ Failed to fetch product info</p>`;
-        }
+        });
+      } catch (err) {
+        output.textContent = `⚠️ ${err.message}`;
       }
     });
+
+    async function fetchProduct(barcode) {
+      try {
+        const res = await fetch(`https://chinatown-barlookup.123456789sunzheng.workers.dev/?barcode=${encodeURIComponent(barcode)}`);
+        const data = await res.json();
+
+        if (data.error) {
+          product.innerHTML = `<p>❌ ${data.error}</p>`;
+        } else {
+          product.innerHTML = `
+            <p><strong>Name:</strong> ${data.Pm}</p>
+            <p><strong>Unit:</strong> ${data.Dw}</p>
+            <p><strong>Price:</strong> ${data.hyj}</p>
+          `;
+        }
+      } catch (err) {
+        product.innerHTML = `<p>⚠️ Failed to fetch product info</p>`;
+      }
+    }
   </script>
 </body>
 </html>
