--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <div id="product"></div>
 
   <script type="module">
-    import { BrowserMultiFormatReader } from 'https://cdn.jsdelivr.net/npm/@zxing/browser@0.2.6/+esm';
+    import { BrowserMultiFormatReader } from 'https://cdn.jsdelivr.net/npm/@zxing/browser@latest/+esm';
 
     const video = document.getElementById('video');
     const output = document.getElementById('output');
