--- a/index.html
+++ b/index.html
@@ -2,45 +2,88 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Barcode Scanner</title>
+  <title>📦 Chinatown Barcode Scanner</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     body {
-      font-family: sans-serif;
+      font-family: 'Segoe UI', sans-serif;
       text-align: center;
-      background: #f4f4f4;
+      background: #e6f2ff;
+      color: #003366;
       padding: 2rem;
     }
-    video {
+
+    h1 {
+      color: #005580;
+      margin-bottom: 1.5rem;
+    }
+
+    .video-container {
+      display: inline-block;
+      position: relative;
+      overflow: hidden;
       width: 100%;
       max-width: 400px;
-      border: 2px solid #ccc;
+      border: 3px solid #99ccff;
       border-radius: 10px;
+      background: #cce6ff;
       margin: 1rem 0;
     }
-    select, input[type="text"] {
-      padding: 8px;
-      font-size: 16px;
-      margin: 0.5rem 0;
-      width: 250px;
+
+    video {
+      transform-origin: center center;
+      transition: transform 0.2s ease-in-out;
+      width: 100%;
+      height: auto;
+      display: block;
     }
-    button {
-      padding: 8px 16px;
+
+    select, input[type="text"], button {
+      padding: 10px;
       font-size: 16px;
-      margin-left: 8px;
+      margin: 0.5rem;
+      border-radius: 6px;
+      border: 1px solid #66b2ff;
+    }
+
+    select, input[type="text"] {
+      width: 260px;
+    }
+
+    button {
+      background-color: #66b2ff;
+      color: white;
+      border: none;
       cursor: pointer;
     }
+
+    button:hover {
+      background-color: #3399ff;
+    }
+
     #zoomSlider {
-      width: 250px;
+      width: 260px;
       margin-top: 1rem;
     }
+
+    label[for="zoomSlider"] {
+      display: block;
+      margin-bottom: 0.3rem;
+      font-weight: bold;
+    }
+
     #output, #product {
-      margin-top: 1rem;
+      margin-top: 1.2rem;
       font-size: 18px;
+    }
+
+    #product p {
+      margin: 0.3rem 0;
     }
   </style>
 </head>
 <body>
+
   <h1>📦 Chinatown Barcode Scanner</h1>
 
   <select id="cameraSelect">
@@ -48,7 +91,10 @@
   </select>
   <br />
   <button id="start-btn">Start Scanning</button>
-  <video id="video" playsinline muted></video>
+
+  <div class="video-container">
+    <video id="video" playsinline muted></video>
+  </div>
 
   <div>
     <label for="zoomSlider">🔍 Zoom:</label>
@@ -72,9 +118,7 @@
     const product = document.getElementById('product');
     const zoomSlider = document.getElementById('zoomSlider');
     const cameraSelect = document.getElementById('cameraSelect');
-    let track = null;
 
-    // 🧠 Populate camera select dropdown
     async function populateCameraList() {
       const devices = await BrowserMultiFormatReader.listVideoInputDevices();
       cameraSelect.innerHTML = '';
@@ -86,7 +130,6 @@
       }
     }
 
-    // 🎬 Start scanning from selected camera
     async function startScanning() {
       output.textContent = "Scanning...";
       product.innerHTML = "";
@@ -101,41 +144,29 @@
         reader.decodeFromVideoDevice(selectedDeviceId, video, async (result, err, controls) => {
           if (result) {
             const code = result.getText();
-            output.textContent = `Scanned: ${code}`;
+            output.textContent = `✅ Scanned: ${code}`;
             controls.stop();
             fetchProduct(code);
           }
         });
 
-        // Setup zoom support
         const stream = await navigator.mediaDevices.getUserMedia({
           video: {
             deviceId: { exact: selectedDeviceId },
-            facingMode: "environment", // ✅ Prefer back camera
+            facingMode: "environment",
             width: { ideal: 1920 },
-            height: { ideal: 1080 },
-            advanced: [
-              { focusMode: "continuous" },  // 🔁 Some Android browsers may honor this
-              { torch: false },             // Prevent flash if auto-enabled
-            ]
+            height: { ideal: 1080 }
           }
         });
 
-        track = stream.getVideoTracks()[0];
-        const capabilities = track.getCapabilities();
+        // Fake zoom setup (CSS transform)
+        zoomSlider.oninput = () => {
+          const zoom = parseFloat(zoomSlider.value);
+          video.style.transform = `scale(${zoom})`;
+        };
 
-        if (capabilities.zoom) {
-          zoomSlider.min = capabilities.zoom.min;
-          zoomSlider.max = capabilities.zoom.max;
-          zoomSlider.step = capabilities.zoom.step;
-          zoomSlider.value = capabilities.zoom.min;
-          zoomSlider.style.display = 'inline-block';
-          zoomSlider.oninput = () => {
-            track.applyConstraints({ advanced: [{ zoom: parseFloat(zoomSlider.value) }] });
-          };
-        } else {
-          zoomSlider.style.display = 'none';
-        }
+        zoomSlider.style.display = 'inline-block';
+        video.srcObject = stream;
 
       } catch (err) {
         output.textContent = `❌ ${err.message}`;
@@ -143,6 +174,7 @@
     }
 
     document.getElementById('start-btn').addEventListener('click', startScanning);
+
     window.handleManualSearch = () => {
       const code = document.getElementById('manualInput').value.trim();
       if (!code) {
@@ -171,7 +203,6 @@
       }
     }
 
-    // Load camera list on load
     window.addEventListener("DOMContentLoaded", populateCameraList);
   </script>
 </body>
