--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>📦 Chinatown Barcode Scanner</title>
+  <title>📦 中国城询价系统</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     body {
